# megan

./: CMakeLists.txt  README.md
src/: Bus.cpp  Bus.hpp  Cpu68000.cpp  Cpu68000.hpp  Graphics.cpp  Graphics.hpp  VDP.cpp  VDP.hpp  defs.hpp  main.cpp
src/68k/: build.bat  buildOptimised.bat  main.asm
